2009-12-23  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/test-twittering-mode.el (tinyurl): add test for tinyurl

	* twittering-mode.el (twittering-tinyurl-get): fix for emacs22.
	In emacs22, there's "^M" at the end of a buffer created by
	url-retrieve
	(twittering-tinyurl-get): fix by cvmat

2009-12-22  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-tinyurl-get): retrieves a
	shortened URL without `url-insert'.
	(twittering-url-copy-file-async): add new
	function for downloading a file asynchronously.
	(twittering-retrieve-image-without-wget): retrieves images
	asynchronously with `twittering-url-copy-file-async'.

2009-12-22  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-ucs-to-char): turned into
	function from macro
	(twittering-update-lambda, twittering-update-jojo): more portable
	string expression. Executable only in Japanese environment.
	(twittering-tinyurl-get): use with-temp-buffer with url-insert

2009-12-21  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-icon-path): `require' is added.
	(twittering-tinyurl-get, twittering-retrieve-image-without-wget):
	The dependency on `mm-url' is removed by using `url' library.
	(twittering-http-application-headers):
	`Content-Length' is added to `headers'.

2009-12-20  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-update-mode-line): add
	(twittering-toggle-proxy, twittering-icon-mode)
	(twittering-scroll-mode, twittering-jojo-mode): use
	update-mode-line

2009-12-19  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-use-ssl): add
	(twittering-find-curl-program): add
	(twittering-start-http-ssl-session): add
	(twittering-start-http-non-ssl-session): add
	(twittering-http-application-headers): add
	(twittering-http-get): rewritten by using start-http-session
	(twittering-http-post): rewritten by using start-http-session
	(twittering-http-post-default-sentinel): use the same argument